# MusescoreReader

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.soundfonts  README.md
.github/workflows/: publish-app-images.yml  publish-soundfonts.yml
backend/: Cargo.toml
backend/src/: audio.rs  config.rs  main.rs  models.rs  storage.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: InstrumentStrip.svelte  Mixer.svelte
frontend/src/lib/: api.ts  midi-player.ts  score-viewer.ts  stem-mixer.ts
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  backend-deployment.yaml  backend-ingress.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-service.yaml  https-redirect-middleware.yaml
helm/templates/certificate/: certificate.yaml  issuer.yaml
soundfonts/: gains.json  mapping.json  sources.json
