[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-credential-types = "1.2.2"
midly = "0.5"
aws-sdk-s3 = "1.96.0"
axum = { version = "0.8.4", features = ["multipart"] }
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
http = "1.3.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
